[package]
name = "link-me"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icondata = { version = "0.1.0", features = [
  "AiLinkedinFilled",
  "AiBookFilled",
] }
leptos = { version = "0.5.4", features = ["csr"] }
leptos_router = "0.5.4"
thaw = "0.1.5"
