[package]
name = "link-me"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icondata = { version = "0.3.0" }
leptos = { version = "0.5.6", features = ["csr"] }
leptos_icons = "0.2.1"
leptos_router = "0.5.6"
